Fix: Use arch-specific DMG artifact names to prevent parallel build conflicts

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
       "artifactName": "Literaturfinder-${version}-macOS-${arch}.dmg"
     },
     "dmg": {
-      "artifactName": "Literaturfinder-${version}-macOS.dmg"
+      "artifactName": "Literaturfinder-${version}-macOS-${arch}.dmg"
     },
     "linux": {
       "target": ["AppImage"],
