--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^24.5.2",
     "@vitejs/plugin-react": "^5.0.3",
@@ -40,6 +41,7 @@
     "cross-env": "^10.0.0",
     "electron": "^38.1.2",
     "electron-builder": "^26.0.12",
+    "png-to-ico": "^3.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "vite": "^7.1.6",
@@ -62,9 +64,11 @@
     "win": {
       "target": {
         "target": "portable",
-        "arch": ["x64"]
+        "arch": [
+          "x64"
+        ]
       },
-      "icon": "public/icon.png",
+      "icon": "public/icon.ico",
       "forceCodeSigning": false,
       "signAndEditExecutable": false
     },
@@ -74,7 +78,10 @@
     "mac": {
       "target": {
         "target": "dmg",
-        "arch": ["x64", "arm64"]
+        "arch": [
+          "x64",
+          "arm64"
+        ]
       },
       "category": "public.app-category.education",
       "icon": "public/icon.png",
@@ -84,7 +91,9 @@
       "artifactName": "Literaturfinder-${version}-macOS-${arch}.dmg"
     },
     "linux": {
-      "target": ["AppImage"],
+      "target": [
+        "AppImage"
+      ],
       "category": "Education",
       "icon": "public/icon.png",
       "artifactName": "Literaturfinder-${version}-Linux.AppImage"
